chore: Update code style for analytics tests (#12594)