@@ -52,6 +52,7 @@ import static org.mockito.Mockito.when;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.function.Consumer;
 
 import org.hisp.dhis.analytics.AggregationType;
@@ -91,8 +92,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 import org.springframework.jdbc.core.JdbcTemplate;
-
-import com.google.common.collect.ImmutableList;
 
 /**
  * @author Luciano Fiandesio
@@ -338,10 +337,9 @@ class EventsAnalyticsManagerTest extends EventAnalyticsTest
     {
         String expected = "ax.\"fWIAEtYVEGk\" is null";
         String unexpected = "(ax.\"fWIAEtYVEGk\" in (";
-        testIt( IN, NV,
-            ImmutableList.of(
-                ( capturedSql ) -> assertThat( capturedSql, containsString( expected ) ),
-                ( capturedSql ) -> assertThat( capturedSql, not( containsString( unexpected ) ) ) ) );
+        testIt( IN, NV, List.of(
+            ( capturedSql ) -> assertThat( capturedSql, containsString( expected ) ),
+            ( capturedSql ) -> assertThat( capturedSql, not( containsString( unexpected ) ) ) ) );
     }
 
     private void testIt( QueryOperator operator, String filter, Collection<Consumer<String>> assertions )
